--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>To Gather</title>
+<title>To-Gather</title>
 <link rel="stylesheet" hfref="style.css">
 </head>
 <body>
-  <h1>We find better solutions To Gather.</h1>
+  <h1>We find answers at To-Gather.</h1>
   <p>This will grow into a tool for aggregating and querying public data. Using publicly accessible information, To Gather attempts to bring you up-to-date information on news, social media, sports, stocks and more.</p>
 </body>
 </html>
