--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <h1>We find answers at To-Gather.</h1>
-  <p>This will grow into a tool for aggregating and querying public data. Using publicly accessible information, To Gather attempts to bring you up-to-date information on news, social media, sports, stocks, and more.</p>
+  <p>This will grow into a tool for aggregating and querying public data. Using publicly accessible information, To Gather attempts to bring you up-to-date information on news, social media, sports, stocks, and more cool stuff like that.</p>
 </body>
 </html>
