--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <body>
   <h1>We find answers at To-Gather.</h1>
   <p>This will grow into a tool for aggregating and querying public data. Using publicly accessible information, To Gather attempts to bring you up-to-date information on news, social media, sports, stocks, and more cool stuff like that.</p>
+  <p> We're connecting multiple accounts into one space, to make your daily digestion of information more simplified, streamlined and more accessible.</p>
 </body>
 </html>
