--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>To-Gather</title>
-<link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Hanalei+Fill&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>To-Gather</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Hanalei+Fill&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <h1>We find answers at To-Gather.</h1>
-  <p>This will grow into a tool for aggregating and querying public data. Using publicly accessible information, To Gather attempts to bring you up-to-date information on news, social media, sports, stocks, and more cool stuff like that.</p>
-  <p> We're connecting multiple accounts into one space, to make your daily digestion of information more simplified, streamlined and more accessible.</p>
+  <header>
+    <h1>To-Gather</h1>
+    <p>Select a category to explore aggregated content.</p>
+  </header>
+
+  <main class="panel-grid">
+    <div class="panel social">Social Media</div>
+    <div class="panel news">News Media</div>
+    <div class="panel investing">Investing</div>
+    <div class="panel sports">Sports</div>
+  </main>
 </body>
 </html>
