--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="newsCount">News Media: 0</div>
     <div id="investingCount">Investing: 0</div>
     <div id="sportsCount">Sports: 0</div>
-    <div id="researchCount">Sports: 0</div>
+    <div id="researchCount">Research: 0</div>
   </div>
 </div>
   <main class="panel-grid">
