--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <h1>To-Gather</h1>
     <p>Select a category to explore aggregated content.</p>
   </header>
+
   <div class="search-section">
     <input type="text" id="searchInput" placeholder="Search across all categories..." />
     <button onclick="handleSearch()">Search</button>
     <div class="results-summary">
-      <div id="socialCount" onclick="expandSocialPanel()">Social Media: 0</div>
+      <div id="socialCount" onclick="togglePanel('socialMediaPanel')">Social Media: 0</div>
       <div id="newsCount">News Media: 0</div>
       <div id="investingCount">Investing: 0</div>
       <div id="sportsCount">Sports: 0</div>
@@ -28,121 +29,118 @@
   </div>
 
   <main class="panel-grid">
-    <div class="panel">
-      <div class="panel-header" onclick="toggleSubPanel('socialMediaPanel')">
-        <i class="fas fa-hashtag"></i> Social Media
+    <!-- Social Media Panel -->
+    <div class="panel" id="socialMediaPanel">
+      <div class="panel-header" onclick="togglePanel('socialMediaPanel')">
+        <i class="fab fa-hashtag"></i>
+        <span>Social Media</span>
+        <span class="arrow">▼</span>
       </div>
-      <div class="panel-content" id="socialMediaPanel">
+      <div class="panel-content">
+        <!-- Twitter -->
         <div class="sub-panel">
           <div class="sub-panel-header" onclick="toggleSubPanel('twitterPanel')">Twitter/X</div>
-          <div class="sub-panel-content" id="twitterPanel"></div>
+          <div class="sub-panel-content" id="twitterPanel">
+            <div class="result-item">
+              <img src="https://abs.twimg.com/icons/apple-touch-icon-192x192.png" alt="Twitter">
+              <a href="https://twitter.com/example" target="_blank">Post about AI breakthroughs</a>
+            </div>
+          </div>
         </div>
+
+        <!-- Instagram -->
         <div class="sub-panel">
           <div class="sub-panel-header" onclick="toggleSubPanel('instagramPanel')">Instagram</div>
-          <div class="sub-panel-content" id="instagramPanel"></div>
+          <div class="sub-panel-content" id="instagramPanel">
+            <div class="result-item">
+              <img src="https://instagram.com/static/images/ico/favicon-200.png/ab6eff595bb1.png" alt="Instagram">
+              <a href="https://instagram.com/example" target="_blank">Cool post on AI visuals</a>
+            </div>
+          </div>
         </div>
+
+        <!-- Reddit -->
         <div class="sub-panel">
           <div class="sub-panel-header" onclick="toggleSubPanel('redditPanel')">Reddit</div>
-          <div class="sub-panel-content" id="redditPanel"></div>
+          <div class="sub-panel-content" id="redditPanel">
+            <div class="result-item">
+              <img src="https://www.redditstatic.com/desktop2x/img/favicon/apple-icon-180x180.png" alt="Reddit">
+              <a href="https://reddit.com/r/example" target="_blank">Reddit thread on AGI</a>
+            </div>
+          </div>
         </div>
+
+        <!-- OnlyFans -->
         <div class="sub-panel">
           <div class="sub-panel-header" onclick="toggleSubPanel('onlyfansPanel')">OnlyFans</div>
-          <div class="sub-panel-content" id="onlyfansPanel"></div>
+          <div class="sub-panel-content" id="onlyfansPanel">
+            <div class="result-item">
+              <img src="https://onlyfans.com/favicon.ico" alt="OnlyFans">
+              <a href="https://onlyfans.com/example" target="_blank">Exclusive behind-the-scenes</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="panel" onclick="togglePanel(this)">
+    <!-- Other Panels (placeholders) -->
+    <div class="panel">
       <div class="panel-header">
         <i class="fas fa-newspaper"></i> News Media
       </div>
-      <div class="panel-content">
-        <p>Top headlines, RSS feeds, and articles will populate here.</p>
-      </div>
+      <div class="panel-content">Top headlines go here.</div>
     </div>
 
-    <div class="panel" onclick="togglePanel(this)">
+    <div class="panel">
       <div class="panel-header">
         <i class="fas fa-chart-line"></i> Investing
       </div>
-      <div class="panel-content">
-        <p>Stock tickers, charts, and financial data will show here.</p>
-      </div>
+      <div class="panel-content">Stock market data goes here.</div>
     </div>
 
-    <div class="panel" onclick="togglePanel(this)">
+    <div class="panel">
       <div class="panel-header">
-        <i class="fas fa-basketball-ball"></i> Sports
+        <i class="fas fa-football-ball"></i> Sports
       </div>
-      <div class="panel-content">
-        <p>Live scores, player stats, and schedules will be shown here.</p>
-      </div>
+      <div class="panel-content">Live scores and stats go here.</div>
     </div>
 
-    <div class="panel" onclick="togglePanel(this)">
+    <div class="panel">
       <div class="panel-header">
-        <i class="fa-solid fa-book"></i> Research
+        <i class="fas fa-book"></i> Research
       </div>
-      <div class="panel-content">
-        <p>Research studies, articles and insights will be shown here.</p>
-      </div>
+      <div class="panel-content">Scientific research content goes here.</div>
     </div>
   </main>
 
   <script>
-    function togglePanel(panel) {
-      const isActive = panel.classList.contains('active');
-      document.querySelectorAll('.panel').forEach(p => p.classList.remove('active'));
-      if (!isActive) panel.classList.add('active');
+    function togglePanel(id) {
+      const panel = document.getElementById(id);
+      const isOpen = panel.classList.contains("active");
+      document.querySelectorAll(".panel").forEach(p => p.classList.remove("active"));
+      if (!isOpen) panel.classList.add("active");
     }
 
     function toggleSubPanel(id) {
-      const el = document.getElementById(id);
-      el.style.display = el.style.display === 'block' ? 'none' : 'block';
-    }
-
-    function expandSocialPanel() {
-      document.getElementById('socialMediaPanel').style.display = 'block';
-    }
-
-    function injectResults(containerId, results) {
-      const container = document.getElementById(containerId);
-      container.innerHTML = "";
-      if (results.length === 0) {
-        container.innerHTML = "<p>No results found.</p>";
-        return;
-      }
-      results.forEach(item => {
-        const div = document.createElement("div");
-        div.className = "result-item";
-        div.innerHTML = `
-          <img src="${item.image}" alt="Preview">
-          <a href="${item.url}" target="_blank">${item.title}</a>
-        `;
-        container.appendChild(div);
-      });
+      const content = document.getElementById(id);
+      content.classList.toggle("active");
     }
 
     function handleSearch() {
       const query = document.getElementById("searchInput").value.toLowerCase();
-      const socialResults = {
-        twitter: [
-          { title: "Tweet about AI", url: "https://twitter.com/example1", image: "https://placekitten.com/60/60" },
-          { title: "Tech Tweet", url: "https://twitter.com/example2", image: "https://placekitten.com/61/60" }
-        ],
-        instagram: [
-          { title: "Design Trends", url: "https://instagram.com/example", image: "https://placekitten.com/62/60" }
-        ],
-        reddit: [],
-        onlyfans: []
+      const results = {
+        social: query.includes("twitter") || query.includes("reddit") ? 3 : 0,
+        news: query.includes("cnn") || query.includes("breaking") ? 2 : 0,
+        investing: query.includes("stocks") || query.includes("market") ? 4 : 0,
+        sports: query.includes("nba") || query.includes("football") ? 1 : 0,
+        research: query.includes("science") || query.includes("researchers") ? 5 : 0,
       };
-      const count = Object.values(socialResults).reduce((sum, arr) => sum + arr.length, 0);
-      document.getElementById("socialCount").textContent = `Social Media: ${count}`;
-      expandSocialPanel();
-      injectResults("twitterPanel", socialResults.twitter);
-      injectResults("instagramPanel", socialResults.instagram);
-      injectResults("redditPanel", socialResults.reddit);
-      injectResults("onlyfansPanel", socialResults.onlyfans);
+
+      document.getElementById("socialCount").textContent = `Social Media: ${results.social}`;
+      document.getElementById("newsCount").textContent = `News Media: ${results.news}`;
+      document.getElementById("investingCount").textContent = `Investing: ${results.investing}`;
+      document.getElementById("sportsCount").textContent = `Sports: ${results.sports}`;
+      document.getElementById("researchCount").textContent = `Research: ${results.research}`;
     }
   </script>
 </body>
